Fix spacing issues for policy ui

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -548,7 +548,13 @@
     -fx-font-size: 13px !important;
     -fx-text-fill: #010504 !important;
     -fx-background-radius: 3px !important;
-    -fx-padding: 1 3 1 3 !important;
+    -fx-padding: 0px !important;
+}
+
+.policies-label {
+    -fx-font-size: 14px;
+    -fx-padding: 2px 4px;
+    -fx-background-radius: 2.5;
 }
 
 
